--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Snake Game</title>
 </head>
 <body>
+    <h1>Snake Game!</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
